      and logged a warning sing 4.83; now they are a configuration file error.

JH/08 Bug 1836: Fix crash in VRFY handling when handed an unqualified name
      (lacking @domain).  Apply the same qualification processing as RCPT.

JH/09 Bug 1804: Avoid writing msglog files when in -bh or -bhc mode.

JH/10 Support ${sha256:} applied to a string (as well as the previous
      certificate).


Exim version 4.87
-----------------
JH/01 Bug 1664: Disable OCSP for GnuTLS library versions at/before 3.3.16
      and 3.4.4 - once the server is enabled to respond to an OCSP request
      it does even when not requested, resulting in a stapling non-aware
      client dropping the TLS connection.

TF/01 Code cleanup: Overhaul the debug_selector and log_selector machinery to
      support variable-length bit vectors. No functional change.

TF/02 Improve the consistency of logging incoming and outgoing interfaces.
      The I= interface field on outgoing lines is now after the H= remote
      host field, same as incoming lines. There is a separate
      outgoing_interface log selector which allows you to disable the
      outgoing I= field.

JH/02 Bug 728: Close logfiles after a daemon-process "exceptional" log write.
      If not running log_selector +smtp_connection the mainlog would be held
      open indefinitely after a "too many connections" event, including to a
      deleted file after a log rotate. Leave the per net connection logging
      leaving it open for efficiency as that will be quickly detected by the
      check on the next write.

HS/01 Bug 1671: Fix post transport crash.
      Processing the wait-<transport> messages could crash the delivery
      process if the message IDs didn't exist for some reason. When
      using 'split_spool_directory=yes' the construction of the spool
      file name failed already, exposing the same netto behaviour.

JH/03 Bug 425: Capture substrings in $regex1, $regex2 etc from regex &
      mime_regex ACL conditions.
